--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             <!-- end of single item -->
             <!-- single item -->
             <li>
-              <a href="https://www.twitter.com" class="social-icon">
+              <a href="https://www.instagram.com" class="social-icon">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
